--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,7 +36,11 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <!-- I compressed the image views/images/pizzeria.jpg using Optimizilla.
+        Original image was 2.3M.
+        Compressed the image to 63 KB which reduced it by 97%.
+        Image is now in image folder as views/images/pizzeria-min.jpg -->
+        <img src="images/pizzeria-min.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -104,7 +108,11 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <img src="images/pizza.png" class="img-responsive">
+              <!-- I compressed the image views/images/pizza.png using Optimizilla.
+              Original image was 49 KB	.
+              Compressed the image to 9.1 KB which reduced it by 81%.
+              Image is now in image folder as views/images/pizza-min.jpg -->
+              <img src="images/pizza-min.png" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Udacity Special</h4>
@@ -121,7 +129,11 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <img src="images/pizza.png" class="img-responsive">
+              <!-- I compressed the image views/images/pizza.png using Optimizilla.
+              Original image was 49 KB	.
+              Compressed the image to 9.1 KB which reduced it by 81%.
+              Image is now in image folder as views/images/pizza-min.jpg -->
+              <img src="images/pizza-min.png" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Cameron Special</h4>
